Get single tag, patch tag, get all tags from user
